# otus-task13

./: CMakeLists.txt  Doxyfile  README.md  graph_legend.html  index.html
.github/workflows/: release.yaml
contrib/: catboostmodel.lib  wrapped_calcer.h
fashio_mnist/: CMakeLists.txt  main.cpp
scripts/: build-x64-win-vs-debug.bat  build-x86_64-linux.sh
